# exec_duration

./: Cargo.toml  Makefile  README.md  deny.toml
examples/: hello.rs
src/: lib.rs  manager.rs  output.rs
